# policygate

./: CHANGELOG.md  README.md  pyproject.toml
docs/: BRD.md  PUBLISHING.md  REFERENCE.md  USAGE_INSTRUCTIONS.md
src/policygate/config/: logging.py  settings.py
src/policygate/domains/gateway/: __init__.py  exceptions.py  models.py  services.py
src/policygate/entry_points/: mcp_server.py
src/policygate/infrastructure/repository/: __init__.py  github_repository_gateway.py
tests/: conftest.py  test_gateway_service.py  test_github_repository_gateway.py  test_logging_setup.py  test_mcp_server_schema.py
