[build-system]
requires = ["uv_build>=0.9.30"]
build-backend = "uv_build"

[project]
name = "policygate"
version = "0.1.0"
description = "MCP server gateway for task-specific AI rules and scripts stored in GitHub"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Sergei Konovalov" },
]
maintainers = [
    { name = "Sergei Konovalov" },
]
keywords = [
    "mcp",
    "policy",
    "gateway",
    "ai",
    "github",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Configuration and logging
    "pydantic-settings>=2.0.0",
    "structlog>=25.1.0",

    # Data validation
    "pydantic>=2.0.0",

    # MCP and integration
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/l0kifs/policygate"
Repository = "https://github.com/l0kifs/policygate"
Issues = "https://github.com/l0kifs/policygate/issues"

[project.scripts]
policygate-mcp = "policygate.entry_points.mcp_server:run"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "ty>=0.0.11",
]

[tool.uv]
package = true
